--- a/01 - Web/pruebas-http/views/ejemplo.ejs
+++ b/01 - Web/pruebas-http/views/ejemplo.ejs
@@ -1,1 +1,35 @@
-<h1>HOLAAAAAAAA <%= datos.nombre %></h1>
+<% const version = "1.0.0"; %>
+<% const total = 1 + 2; %>
+<% const adrian = {
+    nombre: 'Adrian'
+}; %>
+<% const arregloNumeros = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; %>
+<% const urlBase = "https://images.mediotiempo.com/"%>
+<% function anadirAnio (numero) {
+    return '2020' + numero
+}%>>
+<!-- INICIO ITERA -->
+<h1> JOI :<%= datos.joi%></h1>
+
+<% arregloNumeros.forEach( (numero)=> { %>
+    <%- include('Componentes/numeros/mostrar-numeros',
+    {
+        anadirAnio:anadirAnio,
+        numero:numero,
+        urlBase:urlBase
+    })%>>
+
+<% }); %>
+<% if(adrian.esProfesor){%>
+    <h1>Bienvenido profe <%= adrian.nombre %></h1>
+<% } else {%>
+    <h1>Bienvenido estudiante</h1>
+    <p>Suma:<%=datos.suma(2,3)%></p>
+<% }%>
+<h1>
+    HOLAAAA <%= datos.nombre %>
+</h1>
+<p>Version: <%= version %></p>
+<p>Total: <%= total %></p>
+<p>Arreglo: <%= arregloNumeros %></p>
+<p>Objeto: <%= adrian.nombre %></p>
