--- a/01 - Web/pruebas-http/views/ejemplo.ejs
+++ b/01 - Web/pruebas-http/views/ejemplo.ejs
@@ -5,26 +5,29 @@
 }; %>
 <% const arregloNumeros = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; %>
 <% const urlBase = "https://images.mediotiempo.com/"%>
-<% function anadirAnio (numero) {
-    return '2020' + numero
-}%>>
-<!-- INICIO ITERA -->
-<h1> JOI :<%= datos.joi%></h1>
+<% function anadirAnio(numero) {
+    return '2020-' + numero
+} %>
+<!-- INICIO ITERAR -->
+<h1>JOI :<%= datos.joi %></h1>
 
 <% arregloNumeros.forEach( (numero)=> { %>
-    <%- include('Componentes/numeros/mostrar-numeros',
+    <!-- COMPONENTE MOSTRAR NUMERO -->
+    <%- include('componentes/numeros/mostrar-numeros',
     {
-        anadirAnio:anadirAnio,
-        numero:numero,
-        urlBase:urlBase
-    })%>>
-
+    anadirAnio:anadirAnio,
+    numero:numero,
+    urlBase:urlBase
+    }); %>
 <% }); %>
+<!-- FIN ITERAR -->
+
 <% if(adrian.esProfesor){%>
     <h1>Bienvenido profe <%= adrian.nombre %></h1>
+    <p>Suma:<%= datos.suma(2,3)%></p>
 <% } else {%>
     <h1>Bienvenido estudiante</h1>
-    <p>Suma:<%=datos.suma(2,3)%></p>
+    <p>Suma:<%= datos.suma(2,3)%></p>
 <% }%>
 <h1>
     HOLAAAA <%= datos.nombre %>
