--- a/01 - Web/pruebas-http/views/usuarios/rutas/buscar-mostrar-usuario.ejs
+++ b/01 - Web/pruebas-http/views/usuarios/rutas/buscar-mostrar-usuario.ejs
@@ -1,6 +1,16 @@
-<h1>Ruta mostrar usuario</h1>
+<%- include('../../compartido/cabecera')%>
 
-<%- include('../componentes/mostrar-tablas',
-{
+<div class ="container">
+    <h1>Ruta mostrar usuario</h1>
+    <a href="/usuario/ruta/crear-usuario">
+        <button type="button" class="btn btn-primary">
+            Crear Usuario</button>
+    </a>
+
+    <%- include('../componentes/mostrar-tablas')
+    {
     usuarios: datos.usuarios
-})%>
+    })%>
+
+</div>
+<%- include('../../compartido/pie-de-pagina')%>
