--- a/01 - Web/pruebas-http/views/compartido/cabecera.ejs
+++ b/01 - Web/pruebas-http/views/compartido/cabecera.ejs
@@ -3,7 +3,8 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -19,18 +20,18 @@
                    aria-expanded="false">
                     Usuarios
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu"
+                     aria-labelledby="navbarDropdown">
                     <a class="dropdown-item"
                        href="/usuario/ruta/mostrar-usuarios">
                         Listar
                     </a>
                     <a class="dropdown-item"
-                       href="/usuario/ruta/crear-usuarios">
+                       href="/usuario/ruta/crear-usuario">
                         Crear
                     </a>
                 </div>
             </li>
         </ul>
-
     </div>
 </nav>
