--- a/01 - Web/pruebas-http/views/usuario/componentes/mostrar-tabla.ejs
+++ b/01 - Web/pruebas-http/views/usuario/componentes/mostrar-tabla.ejs
@@ -1,13 +1,13 @@
 <table class="table"> <!-- table -->
     <thead> <!-- thead -->
-    <tr> <!-- table row -->
-        <th scope="col"> <!-- table header -->
-            ID
-        </th>
-        <th scope="col">Nombre</th>
-        <th scope="col">Cedula</th>
-        <th scope="col">Acciones</th>
-    </tr>
+        <tr> <!-- table row -->
+            <th scope="col"> <!-- table header -->
+                ID
+            </th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Cedula</th>
+            <th scope="col">Acciones</th>
+        </tr>
     </thead>
     <tbody>
     <% usuarios.forEach( (usuario) => {%>
@@ -26,10 +26,14 @@
                         class="btn btn-info">
                     Editar
                 </button>
-                <button type="button"
-                        class="btn btn-info">
-                    Eliminar
-                </button>
+                <form action="/usuario/<%= usuario.id %>"
+                      method="POST"
+                >
+                    <button type="submit"
+                            class="btn btn-danger">
+                        Eliminar
+                    </button>
+                </form>
             </td> <!-- table detail -->
         </tr>
     <%}); %>
