--- a/01 - Web/pruebas-http/views/usuario/rutas/crear-usuario.ejs
+++ b/01 - Web/pruebas-http/views/usuario/rutas/crear-usuario.ejs
@@ -1,4 +1,5 @@
 <%- include('../../compartido/cabecera') %>
+<% const estaEditando = datos.usuario != undefined;%>
 <div class="container">
     <% if(datos.error){ %>
     <div class="alert alert-danger" role="alert">
@@ -6,9 +7,9 @@
     </div>
     <% } %>
 
-    <h1>Crear Usuario</h1>
+    <h1><%= estaEditando ? 'Editando' + datos.usuario.nombre : 'Crear Usuario' %></h1>
 
-    <form action="/usuario"
+    <form action="/usuario <%= estaEditando ? '/' + datos.usuario.id : ''%>"
           method="POST"
     >
         <div class="form-group">
@@ -17,6 +18,7 @@
                    type="text"
                    name="nombre"
                    placeholder="Ej: Adrian Eguez"
+                   value="<%= estaEditando ? datos.usuario.nombre: ''%>"
                    title="Ingresar nombre de usuario"
                    class="form-control">
             <small id="nombreIDHelp"
@@ -29,6 +31,8 @@
             <input id="cedulaID"
                    type="text"
                    name="cedula"
+                   value="<%= estaEditando ? datos.usuario.cedula: ''%>"
+                   <% estaEditando ? 'disabled': ''%>"
                    placeholder="Ej: 1718138939"
                    title="Ingresar la cedula del usuario"
                    class="form-control">
