--- a/01 - Web/pruebas-http/views/usuario/rutas/buscar-mostrar-usuario.ejs
+++ b/01 - Web/pruebas-http/views/usuario/rutas/buscar-mostrar-usuario.ejs
@@ -1,5 +1,159 @@
 <%- include('../../compartido/cabecera')%>
 <div class="container">
+
+
+    <select name="provincias"
+            id="provincias"
+            onchange="cargarCiudades()"
+    >
+        <option value="1">Pichincha</option>
+        <option value="2">Guayas</option>
+    </select>
+    <div id="contenedorCiudades"></div>
+    <script>
+        function cargarCiudades() {
+            const etiquetaProvincias = document.getElementById('provincias');
+            const idCiudad = etiquetaProvincias.value;
+            fetch('/pepito/ciudades/' + idCiudad, {
+                method: 'GET', // or 'PUT'
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            })
+                .then( // OK
+                    (arregloCiudadString) => {
+                        return arregloCiudadString.json();
+                    }
+                )
+                .then(
+                    (arregloJson) => {
+                        let opciones = ''
+                        arregloJson
+                            .forEach(
+                                (ciudad) => {
+                                    opciones = opciones +
+                                        `<option value="${ciudad.id}">${ciudad.nombre}</option>`;
+                                });
+                        const ciudadPichincha = [
+                            {id: 1, nombre: 'Quito'},
+                            {id: 3, nombre: 'Machachi'}
+                        ]
+                        const ciudadGuayas = [
+                            {id: 2, nombre: 'Guayaquil'},
+                            {id: 4, nombre: 'Duran'}
+                        ]
+                        const etiquetaContenedoraCiudades = document.getElementById('contenedorCiudades');
+
+                        const select = `
+            <select name="ciudad" id="ciudad">
+                ${opciones}
+            </select>
+            `;
+                        const etiquetaSelect = document.createElement('div');
+                        etiquetaSelect.innerHTML = select;
+                        const existeNodo = etiquetaContenedoraCiudades.childNodes[0];
+                        if (existeNodo) {
+                            etiquetaContenedoraCiudades.removeChild(existeNodo);
+                        }
+                        etiquetaContenedoraCiudades.appendChild(etiquetaSelect);
+                    }
+                )
+                .catch( // ERROR
+                    (error) => {
+                        console.error(error);
+                    }
+                )
+            console.log('CAMBIE :D');
+
+        }
+    </script>
+    <div id="contenedorCiudades"></div>
+
+    <script>
+        function cargarCiudades() {
+            console.log('CAMBIE :D');
+            const ciudadPichincha = [
+                { id:1, nombre: 'Quito'},
+                { id:3, nombre: 'Machachi'},
+                { id:5, nombre: 'Calderon'}
+            ]
+            const ciudadGuayas = [
+                { id:2, nombre: 'Guayaquil'},
+                { id:4, nombre: 'Duran'}
+            ]
+            const etiquetaProvincias = document.getElementById('provincias');
+            const etiquetaContenedoraCiudades = document.getElementById('contenedorCiudades');
+            if(etiquetaProvincias.value === '1'){
+                console.log('Pichincha');
+                let opciones = ''
+                    ciudadesPichincha
+                        .forEach(
+                            (ciudad)=>{
+                                opciones=opciones +
+                                    `<option value=$"{ciudad.id}">${ciudad.nombre}</option>`
+                            }
+                        );
+                const select = `
+                <select name="ciudad" id="ciudad">
+                    ${opciones}
+                </select>
+                `;
+                const etiquetaSelect = document.createElement('div');
+                etiquetaSelect.innerHTML = select;
+                const existeNodo = etiquetaContenedoraCiudades.childNodes[0];
+                if (existeNodo){
+                    etiquetaContenedoraCiudades.appendChild('etiquetaSelect');
+                }
+                etiquetaContenedoraCiudades.appendChild('etiquetaSelect');
+            }else{
+                console.log('Guayas');
+            }
+        }
+    </script>
+
+
+    <button onclick="anadirParrafo()">
+         Hola mundo
+
+    </button><div id = "contenedor">
+
+    </div>
+    <script>
+
+        function anadirParrafo() {
+            const elementoContenedor = document.getElementById('contenedor');
+            const linkImagen= 'https://www.ngenespanol.com/animales/duenos-influye-personalidad-perro/';
+            const nombreEtiqueta = 'img';
+            const div= document.createElement(nombreEtiqueta);
+            div.innerHTML = `
+            <div>
+                <img src= "${linkImagen}" width="200" height="200" alt="">
+                <p> HOLA </p>
+                <button class= " btn btn-info"
+                        onclick="anadirParrafo()">
+                        Dale click loco!
+                </button>
+            </div>
+
+                `
+            elementoContenedor.appendChild(imagen);
+
+        }
+
+        function  holaMundo(event) {// Envian un evento
+            console.log(event);
+            console.log('HOLA MUNDO :3');
+
+        }
+    </script>
+
+
+
+
+
+
+
+
     <% if(datos.mensaje){ %>
         <div class="alert alert-primary" role="alert">
             <%= datos.mensaje %>
